After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706578 - Top bar appears in wrong position in background thumbnail
Top bar appears in wrong position in background thumbnail
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Background
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Debarshi Ray
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-22 12:26 UTC by Allan Day
Modified: 2013-09-10 14:17 UTC
See Also:
GNOME target: 3.10
GNOME version: 3.9/3.10


Attachments
screenshot (105.36 KB, image/png)
2013-08-22 12:26 UTC, Allan Day
  Details
background: Fix top bar location on dual-head (1.25 KB, patch)
2013-09-06 05:15 UTC, Bastien Nocera
committed Details | Review
background: Fix debug message (1.28 KB, patch)
2013-09-06 05:15 UTC, Bastien Nocera
committed Details | Review

Description Allan Day 2013-08-22 12:26:52 UTC
Created attachment 252724 [details]
screenshot

The thumbnail for the background button shows the shell top bar. When using an external monitor, this appears in the wrong position - it starts too far too the right, and extends off the edge of the thumbnail. The problem is not present when there is a single display.

Screenshot attached.
Comment 1 Bastien Nocera 2013-09-06 05:15:01 UTC
Created attachment 254226 [details] [review]
background: Fix top bar location on dual-head

For testing:
xrandr --addmode VGA1 1024x768
xrandr --output VGA1 --mode 1024x768 --left-of eDP1
Comment 2 Bastien Nocera 2013-09-06 05:15:27 UTC
Created attachment 254227 [details] [review]
background: Fix debug message

We're never capturing the whole screen, only a single monitor.
Comment 3 Matthias Clasen 2013-09-08 19:28:55 UTC
Review of attachment 254227 [details] [review]:

sure
Comment 4 Matthias Clasen 2013-09-08 19:29:59 UTC
Review of attachment 254226 [details] [review]:

looks plausible
Comment 5 Matthias Clasen 2013-09-08 19:30:07 UTC
Review of attachment 254226 [details] [review]:

looks plausible
Comment 6 Rui Matos 2013-09-10 14:17:20 UTC
Pushing to both master and gnome-3-8:

67f959b..cc3ed8a  gnome-3-8 -> gnome-3-8
c685522..015d296  master -> master

Attachment 254226 [details] pushed as fd4cf7b - background: Fix top bar location on dual-head
Attachment 254227 [details] pushed as 015d296 - background: Fix debug message