background: Fix top bar location on dual-head

For testing:
xrandr --addmode VGA1 1024x768
xrandr --output VGA1 --mode 1024x768 --left-of eDP1

https://bugzilla.gnome.org/show_bug.cgi?id=706578